<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/favourite"
        android:title="@string/favourite" />

    <item
        android:id="@+id/nav_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/alert"
        android:title="@string/alert" />
    <item
        android:id="@+id/action_refresh"
        android:title="Refresh" />
    <item
        android:id="@+id/nav_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/settings"
        android:title="@string/settings" />

</menu>